[gd_scene load_steps=10 format=3 uid="uid://4otg8drx5rwi"]

[ext_resource type="Script" path="res://TurretScripts/Projectiles/projectile_factory.gd" id="1_7qlu0"]
[ext_resource type="Texture2D" uid="uid://raoax8o4vipw" path="res://Assets/Turrets/Projectiles/BLUE_projectile.png" id="1_dw666"]
[ext_resource type="Texture2D" uid="uid://lcfac3i1nban" path="res://Assets/Turrets/Projectiles/GREEN_projectile.png" id="2_b73vb"]
[ext_resource type="Texture2D" uid="uid://jobgij4i5sxe" path="res://Assets/Effects/Explosion_1/e1.png" id="3_5rn2i"]
[ext_resource type="Script" path="res://TurretScripts/Projectiles/Projectile.gd" id="3_tyhfm"]
[ext_resource type="Texture2D" uid="uid://cxkgl0lpk4xdv" path="res://Assets/Effects/Explosion_1/e7.png" id="4_w6ffe"]
[ext_resource type="Script" path="res://TurretScripts/Projectiles/rocket_projectile.gd" id="5_dqb0a"]
[ext_resource type="Texture2D" uid="uid://dx2iashwa3141" path="res://Assets/Turrets/Projectiles/BLUELASER_projectile.png" id="5_fqg8n"]

[sub_resource type="Curve" id="Curve_1mgww"]
_data = [Vector2(0.0567686, 0.956044), 0.0, 0.0, 0, 0, Vector2(0.803493, 0.626374), 0.0, 0.0, 0, 0, Vector2(0.973799, 0.010989), 0.0, 0.0, 0, 0]
point_count = 3

[node name="projectile_factory" type="Node2D"]
script = ExtResource("1_7qlu0")

[node name="base_projectile" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_dw666")
script = ExtResource("3_tyhfm")

[node name="rocket_projectile" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_b73vb")
script = ExtResource("5_dqb0a")

[node name="PArticles" type="Node2D" parent="rocket_projectile"]
position = Vector2(2, 8)

[node name="shiny" type="CPUParticles2D" parent="rocket_projectile/PArticles"]
process_mode = 3
z_index = 3
position = Vector2(-1.66667, 2)
amount = 20
randomness = 1.0
texture = ExtResource("3_5rn2i")
direction = Vector2(0, 1)
spread = 5.81
gravity = Vector2(0, 0)
initial_velocity_max = 30.05
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.01
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_1mgww")
color = Color(6, 2, 2, 1)

[node name="smoke" type="CPUParticles2D" parent="rocket_projectile/PArticles"]
process_mode = 3
z_index = 2
position = Vector2(-1.66667, 2)
amount = 22
lifetime = 1.5
randomness = 1.0
lifetime_randomness = 0.16
texture = ExtResource("4_w6ffe")
direction = Vector2(0, 1)
spread = 24.68
gravity = Vector2(0, 0)
initial_velocity_max = 30.05
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.01
scale_amount_max = 0.05
scale_amount_curve = SubResource("Curve_1mgww")
color = Color(3, 2, 2, 1)

[node name="blue_laser_projectile" type="Sprite2D" parent="."]
modulate = Color(3.55, 1, 100, 1)
texture = ExtResource("5_fqg8n")
script = ExtResource("3_tyhfm")
